--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -47,6 +47,7 @@ pipeline {
                         sudo cp ${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml /etc/owca/
                         sudo cp ${WORKSPACE}/prm/dist/owca-prm.pex /usr/bin/
                         sudo systemctl restart owca
+                        sudo systemctl status owca
                         '''
                     }
                 }
